<resources>
    <string name="app_name">Friendly Home League</string>
    <string name="ida_Y_Vuelta">Ida y Vuelta</string>
    <string name="cant_jugadores">Cantidad de Jugadores</string>
    <string name="nomJuga">Nombre del Jugador </string>
    <string name="crear">Creando Torneo</string>
    <string name="reset">Reiniciando Campos</string>
    <string name="min">Minimo de Jugadores Alcanzado</string>
    <string name="max">Maximo de Jugadores Alcanzado</string>
    <string name="leyenda">L E V</string>
    <string name="encuentros">Encuentros</string>
    <string name="cabeceraNombre">Nombre </string>
    <string name="cabeceraPosicion">Posicion</string>
    <string name="cabeceraJugados">PJ</string>
    <string name="cabeceraGanados">PG</string>
    <string name="cabeceraEmpatados">PE</string>
    <string name="cabeceraPerdidos">PP</string>
    <string name="jugador1">Jugador 1</string>
    <string name="posicion1">1</string>
    <string name="PJ1">0</string>
    <string name="PG1">0</string>
    <string name="PE1">0</string>
    <string name="PP1">0</string>
    <string name="jugador2">Jugador 2</string>
    <string name="posicion2">2</string>
    <string name="PJ2">0</string>
    <string name="PG2">0</string>
    <string name="PE2">0</string>
    <string name="PP2">0</string>
    <string name="jugador3">Jugador 3</string>
    <string name="posicion3">3</string>
    <string name="PJ3">0</string>
    <string name="PG3">0</string>
    <string name="PE3">0</string>
    <string name="PP3">0</string>
    <string name="jugador4">Jugador 4</string>
    <string name="posicion4">4</string>
    <string name="PJ4">0</string>
    <string name="PG4">0</string>
    <string name="PE4">0</string>
    <string name="PP4">0</string>
    <string name="jugador5">Jugador 5</string>
    <string name="posicion5">5</string>
    <string name="PJ5">0</string>
    <string name="PG5">0</string>
    <string name="PE5">0</string>
    <string name="PP5">0</string>
    <string name="jugador6">Jugador 6</string>
    <string name="posicion6">6</string>
    <string name="PJ6">0</string>
    <string name="PG6">0</string>
    <string name="PE6">0</string>
    <string name="PP6">0</string>
    <string name="jugador7">Jugador 7</string>
    <string name="posicion7">7</string>
    <string name="PJ7">0</string>
    <string name="PG7">0</string>
    <string name="PE7">0</string>
    <string name="PP7">0</string>
    <string name="jugador8">Jugador 8</string>
    <string name="posicion8">8</string>
    <string name="PJ8">0</string>
    <string name="PG8">0</string>
    <string name="PE8">0</string>
    <string name="PP8">0</string>
    <string name="jugador9">Jugador 9</string>
    <string name="posicion9">9</string>
    <string name="PJ9">0</string>
    <string name="PG9">0</string>
    <string name="PE9">0</string>
    <string name="PP9">0</string>
    <string name="jugador0">Jugador 10</string>
    <string name="posicion0">10</string>
    <string name="PJ0">0</string>
    <string name="PG0">0</string>
    <string name="PE0">0</string>
    <string name="PP0">0</string>
    <string name="cabeceraPuntos">Pts</string>
    <string name="puntos">0</string>

</resources>
