<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rodrigoboto.friendlyhomeleague.TablaEncuentros">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encuentros"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="2dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leyenda"
        android:gravity="center_horizontal"
        android:text="@string/leyenda"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="165dp" />

    <ScrollView
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leyenda"
        app:layout_constraintVertical_bias="0.004">

        <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">


            <TextView
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="7dp"
                android:text="@string/nomJuga"
                android:textAlignment="center"
                android:textSize="12dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomJuga"
                android:textAlignment="center"
                android:textSize="12dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/ic_brightness_1_black_24dp"
        app:fabSize="auto"
        app:srcCompact="@drawable/ic_format_list_numbered_black_24dp"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteY="455dp"
        tools:layout_editor_absoluteX="304dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/ic_brightness_1_black_24dp"
        app:fabSize="auto"
        app:srcCompact="@drawable/ic_mode_edit_black_24dp"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteY="455dp"
        tools:layout_editor_absoluteX="16dp" />

</android.support.constraint.ConstraintLayout>
